--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -31,7 +31,7 @@
               </div>
               <div class="form-group">
                 <label> About Me</label>
-                <textarea class="form-control" ng-model="editProfile.tempMe.aboutMe" c></textarea>
+                <textarea class="form-control" ng-model="editProfile.tempMe.aboutMe"></textarea>
               </div>
               <div class="form-group">
                 <label> Phone Number</label>
@@ -54,11 +54,12 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="form-group">
           <label for="educationCenterName">Education centre name</label>
-          <select class="form-control" ng-model="editProfile.tempEducation.educationCenterName" ng-options="university.id as university.name for university in editProfile.universitiesList">
+          <select id="educationCenterName" class="form-control" ng-model="editProfile.tempEducation.educationCenterName" ng-options="university.name for university in editProfile.universitiesList">
             <option value="">-- Select university --</option>
           </select>
         </div>
-        
+        <pre>{{editProfile.tempEducation.educationCenterName|json}}</pre>
+
         <div class="form-group">
           <label for="type">Type</label>
           <select id="type" class="form-control" data-ng-model="editProfile.tempEducation.type">
@@ -89,7 +90,7 @@
               </p>
             </div>
           </div>
-          
+
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <label for="end">End date</label>
             <p class="input-group">
